--- a/registrar.html
+++ b/registrar.html
@@ -133,18 +133,18 @@
   <footer><p>© 2025 Great American Hospitality</p></footer>
 
   <!-- Firebase -->
-  <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-auth-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore-compat.js"></script>
-  <script src="firebase-config.js"></script>
+<script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-auth-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore-compat.js"></script>
+<script src="firebase-config.js"></script>
 
-  <!-- OpenCV opcional (warp + contraste). Si no carga, todo sigue funcionando. -->
-  <script async src="https://docs.opencv.org/4.x/opencv.js"></script>
+<!-- (Ya tienes Tesseract en <head>, está bien) -->
+<script async src="https://docs.opencv.org/4.x/opencv.js"></script>
 
-  <!-- Lógica -->
-  <script src="registrar.js"></script>
-  <script src="firebase-config.js"></script>
-  <script src="ocr.js"></script>
+<!-- Lógica -->
+<script src="registrar.js"></script>
+<script src="ocr.js"></script>
+
 
   <!-- Drag & drop (opcional) -->
   <script>
