--- a/registrar.html
+++ b/registrar.html
@@ -22,55 +22,47 @@
     <section class="card panel-option" id="subida-ticket">
       <h2>📸 Sube primero tu ticket (obligatorio)</h2>
 
-      <!-- 1) FOTO DEL TICKET -->
-      <!-- 1) FOTO DEL TICKET -->
-<div class="upload-area">
-  <label for="ticketFile">📎 Imagen del ticket</label>
+      <div class="upload-area">
+        <label for="ticketFile">📎 Imagen del ticket</label>
 
-  <!-- Dropzone SOLO para drag&drop y preview -->
-  <div class="dropzone" id="dropzone" aria-label="Arrastra tu ticket aquí">
-    <p>Arrastra y suelta la imagen aquí</p>
-    <!-- la preview la inyecta el JS (img.preview) -->
-  </div>
-
-    <!-- Input de archivo oculto (lo dispara el botón “Subir archivo”) -->
-    <input type="file" id="ticketFile" accept="image/*" style="display:none;" />
-
-    <!-- Botones separados -->
-    <div class="upload-actions">
-      <button id="btnSeleccionarArchivo" type="button" class="btn-secondary">📎 Subir archivo</button>
-      <button id="btnAbrirCamara" type="button" class="btn-primary">📷 Tomar foto</button>
-    </div>
-  </div>
-
-  <!-- Modal cámara (asegúrate de que solo exista 1) -->
-  <div class="camera-modal" id="cameraModal" aria-hidden="true">
-    <div class="camera-box">
-      <div class="camera-header">
-        <h3>Tomar foto del ticket</h3>
-        <button id="btnCerrarCamara" class="btn-secondary" type="button">Cerrar</button>
-      </div>
-      <video id="cameraVideo" playsinline autoplay></video>
-      <div class="camera-actions">
-        <button id="btnCapturar" class="btn-cta" type="button">Capturar</button>
-      </div>
-    </div>
-  </div>
-
-
-        <!-- Acciones OCR / Edición -->
-        <div class="actions-row">
-          <button id="btnProcesarTicket" type="button" class="btn-cta">
-            <span>Procesar ticket (OCR)</span>
-          </button>
-          <button id="btnEditarManual" type="button" class="btn-secondary">✎ Editar manualmente</button>
+        <div class="dropzone" id="dropzone" aria-label="Arrastra tu ticket aquí">
+          <p>Arrastra y suelta la imagen aquí</p>
         </div>
-        <div id="ocrStatus" class="validacion-msg"></div>
+
+        <input type="file" id="ticketFile" accept="image/*" style="display:none;" />
+
+        <div class="upload-actions">
+          <button id="btnSeleccionarArchivo" type="button" class="btn-secondary">📎 Subir archivo</button>
+          <button id="btnAbrirCamara" type="button" class="btn-primary">📷 Tomar foto</button>
+        </div>
       </div>
+
+      <!-- Modal cámara -->
+      <div class="camera-modal" id="cameraModal" aria-hidden="true">
+        <div class="camera-box">
+          <div class="camera-header">
+            <h3>Tomar foto del ticket</h3>
+            <button id="btnCerrarCamara" class="btn-secondary" type="button">Cerrar</button>
+          </div>
+          <video id="cameraVideo" playsinline autoplay></video>
+          <div class="camera-actions">
+            <button id="btnCapturar" class="btn-cta" type="button">Capturar</button>
+          </div>
+        </div>
+      </div>
+
+      <!-- Acciones OCR / Edición -->
+      <div class="actions-row">
+        <button id="btnProcesarTicket" type="button" class="btn-cta">
+          <span>Procesar ticket (OCR)</span>
+        </button>
+        <button id="btnEditarManual" type="button" class="btn-secondary">✎ Editar manualmente</button>
+      </div>
+      <div id="ocrStatus" class="validacion-msg"></div>
 
       <hr class="divider">
 
-      <!-- 2) FORM -->
+      <!-- FORM -->
       <div class="upload-area">
         <div class="grid-2">
           <div>
@@ -90,16 +82,6 @@
           <input type="text" id="nuevoProducto" placeholder="Agregar manualmente (si faltó algo)" disabled />
           <input type="number" id="nuevaCantidad" placeholder="Cantidad" min="1" disabled />
           <button id="btnAgregarProducto" type="button" class="btn-primary" disabled>➕ Agregar</button>
-        </div>
-
-        <!-- Catálogo -->
-        <div class="productos-wrapper">
-          <div class="productos-header">
-            <input type="text" id="buscarProducto" placeholder="Buscar producto... (ej. hamburguesa)" disabled />
-          </div>
-          <div class="productos-area">
-            <div class="productos-grid" id="productosGrid"></div>
-          </div>
         </div>
 
         <!-- Puntos del ticket -->
@@ -132,22 +114,20 @@
 
   <footer><p>© 2025 Great American Hospitality</p></footer>
 
+  <!-- Firebase -->
   <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-app-compat.js"></script>
-<script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-auth-compat.js"></script>
-<script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-database-compat.js"></script>
-<script src="firebase-config.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-auth-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-database-compat.js"></script>
+  <script src="firebase-config.js"></script>
 
+  <!-- OpenCV (auto enderezado) -->
+  <script async src="https://docs.opencv.org/4.x/opencv.js"></script>
 
+  <!-- Lógica -->
+  <script src="registrar.js"></script>
+  <script src="ocr.js"></script>
 
-<!-- (Ya tienes Tesseract en <head>, está bien) -->
-<script async src="https://docs.opencv.org/4.x/opencv.js"></script>
-
-<!-- Lógica -->
-<script src="registrar.js"></script>
-<script src="ocr.js"></script>
-
-
-  <!-- Drag & drop (opcional) -->
+  <!-- Drag & drop -->
   <script>
     const dz = document.getElementById('dropzone');
     const fileInput = document.getElementById('ticketFile');
