--- a/register.html
+++ b/register.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Crear Cuenta - Applebee's</title>
+  <link rel="icon" type="image/png" sizes="32x32" href="manzanas.png">
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -29,3 +30,4 @@
   <script src="auth.js"></script>
 </body>
 </html>
+
