--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="form-card">
       <h1>Iniciar Sesión</h1>
 
-      <input type="text" id="emailOrPhone" placeholder="Correo o Teléfono (+521...)" />
+      <input type="text" id="emailOrPhone" placeholder="Correo " />
       <input type="password" id="password" placeholder="Contraseña" />
       <button onclick="login()">Entrar</button>
 
@@ -31,3 +31,4 @@
   <script src="auth.js"></script>
 </body>
 </html>
+
