--- a/index.html
+++ b/index.html
@@ -12,23 +12,35 @@
     <div class="form-card">
       <h1>Iniciar Sesión</h1>
 
-      <input type="text" id="emailOrPhone" placeholder="Correo " />
-      <input type="password" id="password" placeholder="Contraseña" />
-      <button onclick="login()">Entrar</button>
+      <input type="text" id="emailOrPhone" placeholder="Correo o Teléfono (+521... o 10 dígitos)" autocomplete="username" />
+      <input type="password" id="password" placeholder="Contraseña" autocomplete="current-password" />
+      <button id="btnLogin">Entrar</button>
 
       <p class="link">
         ¿No tienes cuenta? <a href="register.html">Crear una nueva</a>
       </p>
       <p class="link">
-        <a href="#" onclick="resetPassword()">¿Olvidaste tu contraseña?</a>
+        <a href="#" id="lnkReset">¿Olvidaste tu contraseña?</a>
       </p>
     </div>
   </div>
 
-  <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-auth-compat.js"></script>
-  <script src="firebase-config.js"></script>
-  <script src="auth.js"></script>
+  <script>
+  if ('serviceWorker' in navigator) {
+    window.addEventListener('load', () => {
+      navigator.serviceWorker.register('/sw.js').catch(console.error);
+    });
+  }
+  </script>
+
+  <!-- Firebase (compat) -->
+<script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-auth-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-database-compat.js"></script>
+
+<!-- Tu config e implementación -->
+<script src="firebase-config.js"></script>
+<script src="auth.js"></script>
+
 </body>
 </html>
-
