--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="form-card">
       <h1>Iniciar Sesión</h1>
 
-      <input type="text" id="emailOrPhone" placeholder="Correo o Teléfono (+521... o 10 dígitos)" autocomplete="username" />
+      <input type="text" id="emailOrPhone" placeholder="Correo" autocomplete="username" />
       <input type="password" id="password" placeholder="Contraseña" autocomplete="current-password" />
       <button id="btnLogin">Entrar</button>
 
@@ -44,3 +44,4 @@
 
 </body>
 </html>
+
