--- a/register.html
+++ b/register.html
@@ -12,10 +12,10 @@
     <div class="form-card">
       <h1>Crear Cuenta</h1>
 
-      <input type="text" id="regName" placeholder="Nombre completo" />
-      <input type="email" id="regEmail" placeholder="Correo electrónico" />
-      <input type="tel" id="regPhone" placeholder="Teléfono (opcional)" />
-      <input type="password" id="regPassword" placeholder="Contraseña" />
+      <input type="text" id="regName" placeholder="Nombre completo" autocomplete="name" />
+      <input type="email" id="regEmail" placeholder="Correo electrónico" autocomplete="email" />
+      <input type="tel" id="regPhone" placeholder="Teléfono (10 dígitos, opcional)" inputmode="numeric" />
+      <input type="password" id="regPassword" placeholder="Contraseña" autocomplete="new-password" />
       <button onclick="register()">Crear Cuenta</button>
 
       <p class="link">
@@ -24,10 +24,13 @@
     </div>
   </div>
 
+  <!-- Firebase (compat) -->
   <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-auth-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-database-compat.js"></script>
+
+  <!-- Tu config e implementación -->
   <script src="firebase-config.js"></script>
   <script src="auth.js"></script>
 </body>
 </html>
-
