--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="form-card">
       <h1>Iniciar Sesión</h1>
 
-      <input type="text" id="emailOrPhone" placeholder="Correo" autocomplete="username" />
+      <input type="text" id="emailOrPhone" placeholder="Correo o Teléfono (+521... o 10 dígitos)" autocomplete="username" />
       <input type="password" id="password" placeholder="Contraseña" autocomplete="current-password" />
       <button id="btnLogin">Entrar</button>
 
@@ -37,11 +37,8 @@
 <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-app-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-auth-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-database-compat.js"></script>
-
-<!-- Tu config e implementación -->
 <script src="firebase-config.js"></script>
 <script src="auth.js"></script>
 
 </body>
 </html>
-
