--- a/canjear.html
+++ b/canjear.html
@@ -7,7 +7,7 @@
   <link rel="icon" type="image/png" sizes="32x32" href="manzanas.png">
   <link rel="stylesheet" href="registrar.css" />
 
-  <!-- Firebase (RTDB) -->
+  <!-- Firebase (Compat) -->
   <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-auth-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-database-compat.js"></script>
@@ -22,13 +22,11 @@
     .stat-line { margin: 12px 0 8px; font-weight: 700; }
     .subline { margin: 0 0 18px; opacity: .9; }
     .warn { color:#ffdfaa; } .ok{color:#64db64;} .err{color:#ff9a9a;}
-
     table { width:100%; border-collapse: collapse; font-size:14px;
       background: rgba(25,25,25,.6); border:1px solid rgba(255,255,255,.08);
       border-radius:12px; overflow:hidden; margin-bottom: 18px; }
     th, td { padding:10px 8px; border-bottom:1px solid rgba(255,255,255,.08); }
     th { text-align:left; color:#ffd4d4; }
-
     .rewards { display:grid; grid-template-columns: repeat(auto-fit,minmax(220px,1fr)); gap:12px; }
     .reward-card {
       background: rgba(25,25,25,.7); border:1px solid rgba(255,255,255,.08);
@@ -38,29 +36,13 @@
     .reward-card .cost { font-weight:700; color:#ffd4d4; }
     .reward-card .btn-cta { align-self:flex-start; }
     .reward-card a, .reward-card button { text-decoration:none; }
-
     .qr-box{ display:none; margin-top:20px; padding:16px;
       background: rgba(25,25,25,.7); border:1px solid rgba(255,255,255,.08);
       border-radius:16px; }
     .qr-row{ display:flex; gap:18px; align-items:center; flex-wrap:wrap; }
     #qrcode{ width:180px; height:180px; background:#fff; padding:8px; border-radius:8px; }
     .qr-info small{ opacity:.85; }
-    .qr-actions{
-      margin-top: 14px;
-      display: flex;
-      gap: 10px;
-      flex-wrap: wrap;
-    }
-
-    .code-row{
-      display:flex; align-items:center; gap:8px; margin-top:8px;
-      font-family: ui-monospace, SFMono-Regular, Menlo, Consolas, monospace;
-    }
-    .code-pill{
-      background:#111; border:1px solid rgba(255,255,255,.14);
-      padding:6px 10px; border-radius:10px; letter-spacing:1px;
-    }
-
+    .qr-actions{ margin-top: 14px; display:flex; gap:10px; flex-wrap:wrap; }
     .hist { margin-top: 26px; }
     .hist-grid { display:grid; grid-template-columns: repeat(auto-fit,minmax(260px,1fr)); gap:12px; }
     .hist-card {
@@ -73,12 +55,8 @@
     .chip-err{  background: rgba(255,154,154,.15); color:#ff9a9a; border:1px solid rgba(255,154,154,.35); }
     .hist-qr { width:150px; height:150px; background:#fff; padding:6px; border-radius:8px; }
     .hist-actions { display:flex; gap:8px; flex-wrap:wrap; }
-
-    .link-back--pill { color:#ffffff; background:#f03535; border:2px solid #f03535;
-      padding: 7px 14px; border-radius: 10px; text-decoration: none; font-weight: 700; }
-    .link-back--pill:hover { background: rgb(243, 164, 164); }
-
-    .top-bar a{ text-decoration:none !important; }
+    .link-back--pill { color:#fff; background:#f03535; border:2px solid #f03535; padding:7px 14px; border-radius:10px; font-weight:700; text-decoration:none; }
+    .top-bar a, .top-bar a:link, .top-bar a:visited, .top-bar a:hover, .top-bar a:focus { text-decoration:none!important; border-bottom:none!important; box-shadow:none!important; background-image:none!important; }
   </style>
 </head>
 <body class="bg-animated">
@@ -102,6 +80,7 @@
 
     <div class="stat-line">
       Actualmente tienes <span id="puntosActivos" class="ok" data-value="0">0</span> puntos disponibles.
+      <small id="syncBadge" class="warn" style="display:none; font-weight:600; margin-left:6px;">(sincronizados)</small>
     </div>
     <div id="avisoVencen" class="warn subline"></div>
     <div id="avisoReservados" class="warn subline"></div>
@@ -109,24 +88,20 @@
     <h3 style="margin:18px 0 10px;">Puedes cambiarlos por:</h3>
     <section class="rewards" id="rewardsGrid"></section>
 
-    <!-- QR + CÓDIGO -->
     <section class="qr-box" id="qrBox">
-      <h3>Tu cupón</h3>
+      <h3>Tu cupón QR</h3>
       <div class="qr-row">
         <div id="qrcode"></div>
         <div class="qr-info">
           <div><strong id="rewardName">Recompensa</strong></div>
           <div>Coste: <span id="rewardCost">0</span> pts</div>
-          <div class="code-row">Código: <span id="codeText" class="code-pill">—</span>
-            <button id="btnCopyCode" class="btn-secondary" type="button" style="display:none;">Copiar código</button>
-          </div>
           <div>Válido hasta: <span id="qrExpires"></span> (3 días)</div>
           <div class="qr-actions">
             <a id="btnDownloadQR" class="btn-cta" href="#" style="display:none;">Descargar QR</a>
             <button id="btnOpenQR" class="btn-secondary" type="button" style="display:none;">Abrir imagen</button>
-            <button id="btnCopyPayload" class="btn-secondary" type="button" style="display:none;">Copiar QR (texto)</button>
+            <button id="btnCopyPayload" class="btn-secondary" type="button" style="display:none;">Copiar código</button>
           </div>
-          <small>El gerente puede escanear el QR <em>o</em> teclear el <b>código</b> para validar el canje (un solo uso).</small>
+          <small>Este QR es de un solo uso. Un gerente lo escaneará para validar y canjear.</small>
         </div>
       </div>
     </section>
@@ -139,13 +114,18 @@
   </main>
 
   <script>
+  // ====== Firebase ======
+  if (!firebase.apps.length) {
+    console.error('Firebase no está inicializado. Revisa firebase-config.js');
+    alert('No se pudo inicializar Firebase. Verifica firebase-config.js');
+  }
   const auth = firebase.auth();
   const db   = firebase.database();
 
   const $ = (id)=>document.getElementById(id);
   const tbody = document.querySelector('#tablaPuntos tbody');
 
-  // Catálogo
+  // Catálogo de recompensas
   const REWARDS = [
     { id:'limonada',    name:'Limonada 16 oz',       cost:100 },
     { id:'papas',       name:'Papas fritas',         cost:200 },
@@ -153,7 +133,6 @@
     { id:'brownie',     name:'Brownie con helado',   cost:450 },
     { id:'combo-kids',  name:'Combo infantil',       cost:600 },
   ];
-
   function renderRewards(){
     $('rewardsGrid').innerHTML = REWARDS.map(r => `
       <article class="reward-card">
@@ -167,34 +146,51 @@
   function fmtDate(ms){ if(!ms) return ''; return new Date(ms).toLocaleDateString('es-MX',{year:'numeric',month:'2-digit',day:'2-digit'}); }
   function daysLeft(ms){ if(!ms) return -999; return Math.ceil((ms - Date.now())/86400000); }
 
-  let _tickets = [];     // tickets (RTDB)
-  let _redemps = [];     // redemptions (espejo RTDB)
+  // Estado
+  let _tickets = [];     // tickets RTDB
+  let _redemps = [];     // redemptions espejo RTDB
+  let _pointsNode = 0;   // users/{uid}/points (número)
+  let _syncedOnce = false;
 
-  function renderPoints(){
-    let ptsTicketsActivos = 0, proximos = [];
+  // Calcula disponibles, actualiza UI y (si procede) sincroniza /points
+  function recalcAndRender() {
+    // 1) tabla
     const rows = [];
+    let ptsTicketsActivos = 0;
+    const proximos = [];
     _tickets.forEach(t=>{
       const pts = Number(t.puntos||0);
-      if(!pts) return;
-      const left = t.vencePuntos ? daysLeft(Number(t.vencePuntos)) : 9999;
-      const venc = fmtDate(Number(t.vencePuntos));
-      const estatus = (left >= 0) ? 'Activo' : 'Vencido';
-      if (estatus==='Activo'){ ptsTicketsActivos += pts; if (left<=14) proximos.push({pts,left}); }
-      rows.push(`<tr><td>${pts}</td><td>${venc||'-'}</td><td style="font-weight:700; ${estatus==='Activo'?'color:#9be49b':'color:#ff9a9a'}">${estatus}</td></tr>`);
+      if (!pts) return;
+      const vence = t.vencePuntos ? Number(t.vencePuntos) : (Number(t.createdAt||0) + 180*86400000);
+      const left  = daysLeft(vence);
+      const activo = left >= 0;
+      if (activo) {
+        ptsTicketsActivos += pts;
+        if (left <= 14) proximos.push({pts,left});
+      }
+      rows.push(`<tr>
+        <td>${pts}</td>
+        <td>${fmtDate(vence)}</td>
+        <td style="font-weight:700; ${activo?'color:#9be49b':'color:#ff9a9a'}">${activo?'Activo':'Vencido'}</td>
+      </tr>`);
     });
     tbody.innerHTML = rows.length ? rows.join('') : `<tr><td colspan="3" class="warn">Sin puntos registrados.</td></tr>`;
 
-    const spent = _redemps.filter(r => r.status === 'canjeado').reduce((a,r)=> a + (Number(r.cost)||0), 0);
+    // 2) gastos y reservas
+    const spent = _redemps.filter(r => String(r.status).toLowerCase()==='canjeado')
+                          .reduce((a,r)=> a + (Number(r.cost)||0), 0);
     const now = Date.now();
-    const reserved = _redemps
-      .filter(r => r.status === 'pendiente')
-      .filter(r => !r.expiresAt || Number(r.expiresAt) > now)
-      .reduce((a,r)=> a + (Number(r.cost)||0), 0);
+    const reserved = _redemps.filter(r => String(r.status).toLowerCase()==='pendiente')
+                             .filter(r => !r.expiresAt || Number(r.expiresAt) > now)
+                             .reduce((a,r)=> a + (Number(r.cost)||0), 0);
 
-    const available = Math.max(0, ptsTicketsActivos - spent - reserved);
+    const calculatedAvailable = Math.max(0, ptsTicketsActivos - spent - reserved);
+
+    // 3) Mostrar el mayor entre calculado y /points (evita ver "0" por desincronía)
+    const effectiveAvailable = Math.max(calculatedAvailable, Number(_pointsNode||0));
     const span = $('puntosActivos');
-    span.textContent = String(available);
-    span.dataset.value = String(available);
+    span.textContent = String(effectiveAvailable);
+    span.dataset.value = String(effectiveAvailable);
 
     $('avisoVencen').textContent = proximos.length
       ? `⚠️ ${proximos.reduce((a,b)=>a+b.pts,0)} pts vencen en ~${Math.min(...proximos.map(p=>p.left))} día(s).`
@@ -202,6 +198,20 @@
     $('avisoReservados').textContent = reserved > 0
       ? `Tienes ${reserved} pts reservados en cupones pendientes.`
       : '';
+
+    // 4) Backfill/sync a /points (solo si está ausente o menor y aún no sincronizamos en esta carga)
+    const badge = $('syncBadge');
+    if (!_syncedOnce && (Number(_pointsNode||0) < calculatedAvailable)) {
+      const user = auth.currentUser;
+      if (user) {
+        _syncedOnce = true;
+        db.ref(`users/${user.uid}/points`).set(calculatedAvailable)
+          .then(()=>{ _pointsNode = calculatedAvailable; badge.style.display='inline'; })
+          .catch(()=>{ /* ignorar para no molestar al usuario */ });
+      }
+    } else {
+      badge.style.display='none';
+    }
   }
 
   function renderHistory(){
@@ -210,7 +220,7 @@
     const now = Date.now();
 
     const items = _redemps.filter(r=>{
-      if (r.status === 'pendiente' && r.expiresAt) return Number(r.expiresAt) > now;
+      if (String(r.status).toLowerCase()==='pendiente' && r.expiresAt) return Number(r.expiresAt) > now;
       return true;
     });
 
@@ -220,7 +230,7 @@
     items.forEach(d=>{
       const id = d.code;
       const expStr = fmtDate(d.expiresAt);
-      const chipCls = d.status==='pendiente' ? 'chip-warn' : (d.status==='canjeado' ? 'chip-ok' : 'chip-err');
+      const chipCls = (d.status==='pendiente') ? 'chip-warn' : (d.status==='canjeado' ? 'chip-ok' : 'chip-err');
       const chipTxt = d.status;
       const needsQR = d.status === 'pendiente';
       const qrBoxId = `qr-hist-${id}`, dlId=`dl-${id}`, opId=`op-${id}`, cpId=`cp-${id}`;
@@ -234,7 +244,6 @@
           </div>
           <div>Coste: <b>${d.cost||0} pts</b></div>
           <div>Expira: <b>${expStr || '-'}</b></div>
-          <div>Código: <b>${id}</b></div>
 
           ${needsQR ? `
             <div style="display:flex; gap:12px; align-items:center; flex-wrap:wrap;">
@@ -242,7 +251,7 @@
               <div class="hist-actions">
                 <a id="${dlId}" class="btn-cta" href="#" style="display:none;">Descargar</a>
                 <button id="${opId}" class="btn-secondary" type="button" style="display:none;">Abrir</button>
-                <button id="${cpId}" class="btn-secondary" type="button" style="display:none;">Copiar QR</button>
+                <button id="${cpId}" class="btn-secondary" type="button" style="display:none;">Copiar código</button>
               </div>
             </div>
           ` : `<div class="ok">Canjeado.</div>`}
@@ -262,7 +271,7 @@
             const fileName = `cupon_${d.rewardId||'reward'}_${id}.png`;
             a.href = dataURL; a.setAttribute('download', fileName); a.style.display='inline-flex';
             op.style.display='inline-flex'; op.onclick = ()=> window.open(dataURL,'_blank','noopener');
-            cp.style.display='inline-flex'; cp.onclick = async ()=>{ try{ await navigator.clipboard.writeText(d.qrPayload); alert('Código QR (texto) copiado.'); }catch{ alert('No se pudo copiar.'); } };
+            cp.style.display='inline-flex'; cp.onclick = async ()=>{ try{ await navigator.clipboard.writeText(d.qrPayload); alert('Código del QR copiado.'); }catch{ alert('No se pudo copiar.'); } };
           }
         }, 60);
       }
@@ -277,18 +286,16 @@
     if (canvas && canvas.toDataURL) return canvas.toDataURL('image/png');
     return null;
   }
-  function getMainQrDataURL(){ return getQrDataURLFrom(document.getElementById('qrcode')); }
-  function prepareMainQrDownloadUI(fileName, payloadText, codeStr){
+  function getMainQrDataURL(){
+    return getQrDataURLFrom(document.getElementById('qrcode'));
+  }
+  function prepareMainQrDownloadUI(fileName, payloadText){
     const a = $('btnDownloadQR'), openBtn = $('btnOpenQR'), copyBtn = $('btnCopyPayload');
     const dataURL = getMainQrDataURL();
-    if (!dataURL){ setTimeout(()=>prepareMainQrDownloadUI(fileName, payloadText, codeStr), 60); return; }
+    if (!dataURL){ setTimeout(()=>prepareMainQrDownloadUI(fileName, payloadText), 60); return; }
     a.href = dataURL; a.setAttribute('download', fileName); a.style.display='inline-flex';
     openBtn.style.display='inline-flex'; openBtn.onclick = ()=> window.open(dataURL,'_blank','noopener');
-    copyBtn.style.display='inline-flex'; copyBtn.onclick = async ()=>{ try{ await navigator.clipboard.writeText(payloadText); alert('Texto del QR copiado.'); } catch{ alert('No se pudo copiar.'); } };
-
-    const copyCodeBtn = $('btnCopyCode');
-    copyCodeBtn.style.display = 'inline-flex';
-    copyCodeBtn.onclick = async ()=>{ try{ await navigator.clipboard.writeText(codeStr); alert('Código copiado.'); } catch{ alert('No se pudo copiar.'); } };
+    copyBtn.style.display='inline-flex'; copyBtn.onclick = async ()=>{ try{ await navigator.clipboard.writeText(payloadText); alert('Código del QR copiado.'); } catch{ alert('No se pudo copiar.'); } };
   }
 
   function generarCodigo(len = 10) {
@@ -302,17 +309,19 @@
     const user = auth.currentUser;
     if (!user) return alert('Debes iniciar sesión.');
 
-    // Disponibles en UI
+    // Disponibles en UI (ya es el mayor entre calculado y /points)
     const disponibles = Number($('puntosActivos').dataset.value || 0);
     if (disponibles < reward.cost) {
       return alert(`Te faltan ${reward.cost - disponibles} puntos para canjear ${reward.name}.`);
     }
 
-    // Reserva puntos atómica
-    const ok = await db.ref(`users/${user.uid}/points`).transaction(curr => {
-      const prev = Number(curr)||0; if (prev < reward.cost) return; return prev - reward.cost;
+    // Reserva puntos atómica en /users/{uid}/points
+    const tx = await db.ref(`users/${user.uid}/points`).transaction(curr => {
+      const prev = Number(curr)||0;
+      if (prev < reward.cost) return;   // aborta
+      return prev - reward.cost;
     });
-    if (!ok.committed) { alert('No fue posible reservar puntos. Intenta de nuevo.'); return; }
+    if (!tx.committed) { alert('No fue posible reservar puntos. Intenta de nuevo.'); return; }
 
     // Crea redeem + espejo (pendiente)
     const code = generarCodigo(10);
@@ -333,45 +342,62 @@
     try {
       await db.ref().update(updates);
 
-      // Mostrar QR + CÓDIGO
+      // Mostrar QR principal y refrescar visual
       $('qrBox').style.display = 'block';
       $('rewardName').textContent = reward.name;
       $('rewardCost').textContent = String(reward.cost);
       $('qrExpires').textContent = fmtDate(expiresAt);
-      $('codeText').textContent = code;
-
       const qrEl = $('qrcode'); qrEl.innerHTML = '';
       new QRCode(qrEl, { text: payload, width: 180, height: 180 });
       const fileName = `cupon_${reward.id}_${code}.png`;
-      setTimeout(()=> prepareMainQrDownloadUI(fileName, payload, code), 60);
+      setTimeout(()=> prepareMainQrDownloadUI(fileName, payload), 60);
       $('qrBox').scrollIntoView({ behavior: 'smooth', block: 'start' });
     } catch (e) {
-      // Si falla, devolver puntos
+      // rollback puntos si falla
       await db.ref(`users/${user.uid}/points`).transaction(curr => (Number(curr)||0) + reward.cost);
       console.error(e);
       alert('No se pudo crear el canje. Intenta de nuevo.');
     }
   }
 
+  // ====== App ======
+  document.getElementById('btnLogout').addEventListener('click', async () => {
+    try { await auth.signOut(); location.href = 'index.html'; } catch (e) { alert('No se pudo cerrar sesión'); }
+  });
+
   auth.onAuthStateChanged((user)=>{
     if(!user){ location.href='index.html'; return; }
-    $('btnLogout').onclick = async ()=>{ try{ await auth.signOut(); location.href='index.html'; }catch{} };
-
     renderRewards();
 
+    // 1) Puntos numéricos
+    db.ref(`users/${user.uid}/points`).on('value', (snap)=>{
+      _pointsNode = Number(snap.val()||0);
+      recalcAndRender();
+    }, (err)=> console.error('Error leyendo /points:', err));
+
+    // 2) Tickets
     db.ref(`users/${user.uid}/tickets`).on('value', (snap)=>{
       const val = snap.val() || {};
-      _tickets = Object.values(val);
-      renderPoints();
-    });
+      _tickets = Object.values(val).map(t => ({
+        ...t,
+        total: Number(t.total || 0),
+        puntos: Number(t.puntos || 0),
+        createdAt: Number(t.createdAt || 0),
+        vencePuntos: t.vencePuntos ? Number(t.vencePuntos) : null
+      }));
+      _tickets.sort((a,b) => (b.createdAt||0) - (a.createdAt||0));
+      recalcAndRender();
+    }, (err)=> console.error('Error leyendo /tickets:', err));
 
+    // 3) Redemptions espejo
     db.ref(`users/${user.uid}/redemptions`).on('value', (snap)=>{
       const val = snap.val() || {};
       _redemps = Object.keys(val).map(k => ({ code:k, ...val[k] }));
       renderHistory();
-      renderPoints();
-    });
+      recalcAndRender();
+    }, (err)=> console.error('Error leyendo /redemptions:', err));
 
+    // 4) Clicks en catálogo
     $('rewardsGrid').addEventListener('click', (ev)=>{
       const btn = ev.target.closest('button[data-reward]'); if(!btn) return;
       const rewardId = btn.getAttribute('data-reward');
@@ -379,6 +405,6 @@
       canjearReward(r);
     });
   });
-</script>
+  </script>
 </body>
 </html>
