--- a/canjear.html
+++ b/canjear.html
@@ -167,7 +167,7 @@
   // Catálogo de recompensas
   const REWARDS = [
     { id:'limonada',    name:'Limonada 16 oz',       cost:100 },
-    { id:'papas',       name:'Papas fritas',         cost:200 },
+    { id:'Ensalada cesar',       name:'Ensaladav Cesar',         cost:250 },
     { id:'hamburguesa', name:'Hamburguesa sencilla', cost:300 },
     { id:'brownie',     name:'Brownie con helado',   cost:450 },
     { id:'combo-kids',  name:'Combo infantil',       cost:600 },
@@ -314,7 +314,6 @@
               <div class="hist-actions">
                 <button id="${bigId}" class="btn-cta" type="button">Ver QR grande</button>
                 <a id="${dlId}" class="btn-cta" href="#" style="display:none;">Descargar</a>
-                <button id="${opId}" class="btn-secondary" type="button" style="display:none;">Abrir</button>
                 <button id="${cpId}" class="btn-secondary" type="button" style="display:none;">Copiar código</button>
               </div>
             </div>
@@ -466,3 +465,4 @@
   </script>
 </body>
 </html>
+
