--- a/canjear.html
+++ b/canjear.html
@@ -167,7 +167,8 @@
   // Catálogo de recompensas
   const REWARDS = [
     { id:'limonada',    name:'Limonada 16 oz',       cost:100 },
-    { id:'Ensalada cesar',       name:'Ensaladav Cesar',         cost:250 },
+    { id:'Ensalada cesar',       name:'Ensalada Cesar',         cost:250 },
+    { id:'Chiken Burger', name:'Hamburguesa sencilla', cost:320 },
     { id:'hamburguesa', name:'Hamburguesa sencilla', cost:300 },
     { id:'brownie',     name:'Brownie con helado',   cost:450 },
     { id:'combo-kids',  name:'Combo infantil',       cost:600 },
@@ -465,4 +466,5 @@
   </script>
 </body>
 </html>
+
 
