--- a/canjear.html
+++ b/canjear.html
@@ -168,7 +168,7 @@
   const REWARDS = [
     { id:'limonada',    name:'Limonada 16 oz',       cost:100 },
     { id:'Ensalada cesar',       name:'Ensalada Cesar',         cost:250 },
-    { id:'Chiken Burger', name:'Hamburguesa sencilla', cost:320 },
+    { id:'Chiken Burger', name:'Hamburguesa de pollo', cost:320 },
     { id:'hamburguesa', name:'Hamburguesa sencilla', cost:300 },
     { id:'brownie',     name:'Brownie con helado',   cost:450 },
     { id:'combo-kids',  name:'Combo infantil',       cost:600 },
@@ -466,5 +466,6 @@
   </script>
 </body>
 </html>
+
 
 
